# rabbitmqadmin-ng

./: .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/scripts/: free_disk_space.sh
.github/workflows/: ci.yaml  release.yaml  release.yml  verify-packages.yaml
crates/: .gitignore
crates/rabbitmq_http_client/: Cargo.toml
crates/rabbitmq_http_client/src/: blocking.rs  lib.rs  requests.rs  responses.rs
crates/rabbitmq_http_client/tests/: common.rs  nodes_tests.rs  virtual_hosts_tests.rs
crates/rabbitmqadmin_cli/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
crates/rabbitmqadmin_cli/src/: cli.rs  commands.rs  constants.rs  main.rs
crates/rabbitmqadmin_cli/tests/: cli.rs
crates/rabbitmqadmin_cli/tests/fixtures/: definitions1.json
scripts/: extract-changelog.nu  release-linux.nu  release-macos.nu  release-windows-msi.nu  release-windows.nu  validate-release-version.nu
src/: arg_helpers.rs  bulk.rs  cli.rs  columns.rs  commands.rs  config.rs  constants.rs  errors.rs  exit_code.rs  format.rs  lib.rs  main.rs  output.rs  pre_flight.rs  static_urls.rs  tables.rs  tanzu_cli.rs  tanzu_commands.rs  transformations.rs
src/cli/: dispatch.rs  mod.rs
tests/: arg_helpers_tests.rs  auth_attempts_tests.rs  bindings_tests.rs  channels_tests.rs  cli.rs  columns_tests.rs  combined_integration_tests.rs  common.rs  config_file_tests.rs  config_proptests.rs  connections_tests.rs  definitions_export_tests.rs  definitions_import_tests.rs  delete_exchange_tests.rs  deprecated_feature_tests.rs  error_helper_tests.rs  exchange_federation_tests.rs  exchanges_tests.rs  feature_flag_management_tests.rs  feature_flag_tests.rs  federation_upstream_uri_modification_tests.rs  health_check_tests.rs  help_tests.rs  interactivity_mode_tests.rs  list_bindings_tests.rs  list_deprecated_feature_tests.rs  list_exchanges_tests.rs  list_feature_flag_tests.rs  list_permissions_tests.rs  list_policies_tests.rs  list_queues_tests.rs  list_runtime_parameters_tests.rs  list_user_limits_tests.rs  list_users_tests.rs  list_vhost_limits_tests.rs  list_vhosts_tests.rs  long_scenarios_tests.rs  memory_breakdown_tests.rs  nodes_tests.rs  operator_policies_tests.rs  (+23 more)
tests/fixtures/config_files/: config_file1.conf  empty_config.toml  test_config.toml
tests/fixtures/definitions/: cluster.definitions.1.json  vhost.definitions.1.json
tests/fixtures/messages/: message1.txt  message2.txt
tests/integration/: auth_attempts_tests.rs  bindings_tests.rs  channels_tests.rs  combined_integration_tests.rs  config_file_tests.rs  connections_tests.rs  definitions_export_tests.rs  definitions_import_tests.rs  deprecated_feature_tests.rs  exchange_federation_tests.rs  exchanges_tests.rs  feature_flag_management_tests.rs  feature_flag_tests.rs  federation_link_tests.rs  federation_upstream_uri_modification_tests.rs  health_check_tests.rs  help_tests.rs  main.rs  memory_breakdown_tests.rs  nodes_tests.rs  operator_policies_tests.rs  pagination_tests.rs  permissions_tests.rs  plugins_tests.rs  policies_conflicting_tests.rs  policies_tests.rs  queue_federation_tests.rs  queues_delete_multiple_tests.rs  queues_tests.rs  runtime_parameters_tests.rs  shell_completions_tests.rs  shell_exit_codes_tests.rs  shovel_destination_uri_modification_tests.rs  shovel_source_uri_modification_tests.rs  shovel_tests.rs  streams_tests.rs  test_commands_recommended_against_tests.rs  test_helpers.rs  timeout_tests.rs  tls_tests.rs  (+6 more)
tests/proptests/: bulk_proptests.rs  config_proptests.rs  main.rs
tests/unit/: bulk_classification_tests.rs  bulk_tests.rs  command_run_error_tests.rs  exit_code_tests.rs  main.rs  scheme_tests.rs
wix/: main.wxs
