[package]
name = "rabbitmqadmin"
version = "2.21.0"
edition = "2024"
repository = "https://github.com/rabbitmq/rabbitmqadmin-ng"
description = "rabbitmqadmin v2 is a modern CLI tool for the RabbitMQ HTTP API"
license = "MIT OR Apache-2.0"

[features]
default = ["native-tls"]
# Uses a platform-specific TLS implementation (SecureTransport, SChannel, OpenSSL).
# Disable this feature for musl builds to avoid pulling in an OpenSSL dependency.
native-tls = ["reqwest/default-tls", "rabbitmq_http_client/default-tls"]

[dependencies]
clap = { version = "4", features = ["help", "color", "cargo", "env"] }
url = "2"
sysexits = "0.10"
# For reqwest, we disable defaults to control what TLS features are enabled explicitly at build time.
# Base features always included; native-tls is added via the native-tls feature above.
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "multipart",
    "http2",
    "charset",
    "macos-system-configuration",
    "rustls-tls-native-roots",
] }
rabbitmq_http_client = { version = "0.71.0", default-features = false, features = [
    "blocking",
    "tabled",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1"
tabled = "0.20"
toml = "0.9"
color-print = "0.3"
thiserror = "2"
shellexpand = "3.1"
regex = "1"
indicatif = "0.18"

log = "0.4"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
# fern = "0.7"
# humantime = "2.1.0"
# backtrace = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
backtrace = "0.3"
predicates = "3.1"
proptest = "1.9"

[lints.clippy]
uninlined_format_args = "allow"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
