[package]
name = "rabbitmqadmin"
version = "2.26.0"
edition = "2024"
authors = ["Team RabbitMQ <teamrabbitmq@gmail.com>"]
repository = "https://github.com/rabbitmq/rabbitmqadmin-ng"
description = "rabbitmqadmin v2 is a modern CLI tool for the RabbitMQ HTTP API"
license = "MIT OR Apache-2.0"

[package.metadata.wix]
eula = false

[features]
default = ["native-tls"]
# Uses a platform-specific TLS implementation (SecureTransport, SChannel, OpenSSL).
# Disable this feature for musl builds to avoid pulling in an OpenSSL dependency.
native-tls = ["reqwest/default-tls", "rabbitmq_http_client/default-tls"]

[dependencies]
clap = { version = "4.5", features = ["help", "color", "cargo", "env", "derive"] }
url = "2.5"
sysexits = "0.11"
# For reqwest, we disable defaults to control what TLS features are enabled explicitly at build time.
# Base features always included; native-tls is added via the native-tls feature above.
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
    "multipart",
    "http2",
    "charset",
    "rustls-native-certs",
] }
rabbitmq_http_client = { version = "0.80", default-features = false, features = [
    "blocking",
    "tabled",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
tabled = "0.20"
bel7-cli = { version = "0.8", features = ["tables", "serde", "clap", "completions"] }
toml = "0.9"
toml_edit = "0.24"
color-print = "0.3"
thiserror = "2.0"
shellexpand = "3.1"
regex = "1.12"
indicatif = "0.18"
clap_complete = "4.5"
clap_complete_nushell = "4.5"

log = "0.4"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
# fern = "0.7"
# humantime = "2.1.0"
# backtrace = "0.3"

[dev-dependencies]
assert_cmd = "2.1"
backtrace = "0.3"
predicates = "3.1"
proptest = "1.10"

[lints.clippy]
uninlined_format_args = "allow"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.ci]
inherits = "release"
opt-level = "s"
strip = true
